--- a/recycle-ranger-web/package.json
+++ b/recycle-ranger-web/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
-    "next": "12.0.10",
+    "next": "^12.3.4",
+    "next-auth": "^4.19.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
