--- a/recycle-ranger-web/package.json
+++ b/recycle-ranger-web/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.10.1",
-    "next": "^12.3.4",
-    "next-auth": "^4.19.2",
+    "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "prisma": "^4.10.1",
+    "prisma": "^4.11.0",
     "typescript": "4.5.5"
   }
 }
