--- a/apiBackend/alembic.ini
+++ b/apiBackend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgres://postgres:6DoEJXI2DPDyLpu7@db.qlcthgswjjqohdtkzyad.supabase.co:6543/postgres
+sqlalchemy.url = postgresql://postgres:6DoEJXI2DPDyLpu7@db.qlcthgswjjqohdtkzyad.supabase.co:6543/postgres
 # sqlalchemy.url = postgresql://postgres:ZfT3%%40drQofi4HnNGrM@db.bvwtysuubvotqenckxpr.supabase.co:6543/postgres
 
 [post_write_hooks]
