Refactor authentication and authorization logic
- Added support for different user types (teacher and student) in the authentication process.
- Replaced hard-coded user types with `UsrType` enum for improved type safety.
- Updated the `authenticate` function to accept `UsrType` instead of strings for user type.
- Modified the `create_access_token` function to accept `UsrType` enum for user identification.
- Updated relevant parts of the codebase to utilize the new `UsrType` enum and `Payload` dataclass.

Closes #123

--- a/apiBackend/Pipfile
+++ b/apiBackend/Pipfile
@@ -15,6 +15,7 @@ python-jose = "*"
 python-multipart = "*"
 
 [scripts]
+export = "export PYTHONPATH=$PWD"
 dev = "python app/main.py"
 
 [dev-packages]
