--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
+uvicorn = {extras = ["standard"], version = "*"}
+alembic = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
+pydantic = {extras = ["dotenv"], version = "*"}
+passlib = "*"
+python-jose = "*"
+python-multipart = "*"
+
+[scripts]
+export = "export PYTHONPATH=$PWD"
+dev = "python app/main.py"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10"
