--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 -i https://pypi.org/simple
 alembic==1.11.1
-anyio==3.6.2 ; python_full_version >= '3.6.2'
+anyio==3.7.0 ; python_version >= '3.7'
+bcrypt==4.0.1
 click==8.1.3 ; python_version >= '3.7'
 ecdsa==0.18.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-fastapi==0.95.2
+fastapi==0.96.0
 greenlet==2.0.2 ; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 h11==0.14.0 ; python_version >= '3.7'
 httptools==0.5.0
 idna==3.4 ; python_version >= '3.5'
 mako==1.2.4 ; python_version >= '3.7'
-markupsafe==2.1.2 ; python_version >= '3.7'
+markupsafe==2.1.3 ; python_version >= '3.7'
 passlib==1.7.4
 psycopg2-binary==2.9.6
 pyasn1==0.5.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-pydantic[dotenv]==1.10.7
+pydantic[dotenv]==1.10.9
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
@@ -21,9 +22,9 @@ pyyaml==6.0
 rsa==4.9 ; python_version >= '3.6' and python_version < '4'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.0 ; python_version >= '3.7'
-sqlalchemy==2.0.14
+sqlalchemy==2.0.15
 starlette==0.27.0 ; python_version >= '3.7'
-typing-extensions==4.5.0 ; python_version >= '3.7'
+typing-extensions==4.6.3 ; python_version >= '3.7'
 uvicorn[standard]==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
